force-app/main/default/objects/Inbox__c/Inbox__c.object-meta.xml
<CustomObject>
    <description>Inbox</description>
    <label>Inbox</label>
    <nameField>
        <displayFormat>D-{0000000}</displayFormat>
        <label>DocumentName</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbox</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>