force-app/main/default/objects/Inbox__c/fields/capturedtimestamp__c.field-meta.xml
<CustomField>
    <fullName>capturedtimestamp__c</fullName>
    <description>capturedtimestamp</description>
    <inlineHelpText>capturedtimestamp</inlineHelpText>
    <label>capturedtimestamp</label>
    <length>100</length>
    <type>Text</type>
</CustomField>