force-app/main/default/objects/Inbox__c/fields/DocuSign_Form__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Form__c</fullName>
    <description>DocuSign_Form</description>
    <inlineHelpText>DocuSign_Form</inlineHelpText>
    <label>DocuSign_Form</label>
    <length>100</length>
    <type>Text</type>
</CustomField>