force-app/main/default/objects/Inbox__c/fields/eMail__c.field-meta.xml
<CustomField>
    <fullName>eMail__c</fullName>
    <description>Signed document to be sent to</description>
    <label>eMail</label>
    <type>Email</type>
</CustomField>