force-app/main/default/objects/Inbox__c/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <description>ExternalID</description>
    <externalId>true</externalId>
    <inlineHelpText>ExternalID</inlineHelpText>
    <label>ExternalID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>