force-app/main/default/objects/Inbox__c/fields/Fax_Number__c.field-meta.xml
<CustomField>
    <fullName>Fax_Number__c</fullName>
    <description>Fax Number</description>
    <inlineHelpText>Fax Number</inlineHelpText>
    <label>Fax Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>