force-app/main/default/objects/Inbox__c/fields/guid__c.field-meta.xml
<CustomField>
    <fullName>guid__c</fullName>
    <description>guid</description>
    <inlineHelpText>guid</inlineHelpText>
    <label>guid</label>
    <length>100</length>
    <type>Text</type>
</CustomField>