force-app/main/default/objects/Inbox__c/fields/Signature_Sync_Time__c.field-meta.xml
<CustomField>
    <fullName>Signature_Sync_Time__c</fullName>
    <description>System Time when signature is attached to record</description>
    <inlineHelpText>System Time when signature is attached to record</inlineHelpText>
    <label>Signature Sync Time</label>
    <type>DateTime</type>
</CustomField>